--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,12 +2,16 @@
     <nav>
         <p><a href="mailto:hi@elainewilberforce.com">hi@elainewilberforce.com</a></p>
         <div class="pager-menu">
-            <ul>
+            <ul class="menu-items">
                 <li><a href="#about-me">About me</a></li>
                 <li><a href="#projects">Projects</a></li>
-                <li><a href="#skills">Skills</a></li>
+                <li><a href="#contact">Contact</a></li>
+                <li><a href="#">Archive</a></li>
                 <li><a href="https://weekly-nerd.vercel.app/">The Weekly Nerd</a></li>
             </ul>
+            <button class="menu" aria-label="Toggle Menu">
+                <p>Menu</p>
+            </button>
         </div>
     </nav>
 </header>
