--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,10 +20,10 @@
                     <p>Hey! I am a 23 year old student at the Amsterdam University of Applied
                         Sciences, studying the bachelor Communication and Multimedia design.</p>
 
-                        <p>Ever since I was little, I have had a passion for the web and started a career in web design and development 
-                            after my electrical engineering degree. I'm currently focused on front end design and development, and enjoy 
-                            designing in a playful, colourful and interactive way. Over the years, I have learnt a lot and continue to 
-                            learn and improve my skills.</p>
+                    <p>Ever since I was little, I have had a passion for the web and started a career in web design and development 
+                        after my electrical engineering degree. I'm currently focused on front end design and development, and enjoy 
+                        designing in a playful, colourful and interactive way. Over the years, I have learnt a lot and continue to 
+                        learn and improve my skills.</p>
                 </div>
 
                 <div class="photocard">
@@ -61,9 +61,60 @@
               </ul>
         </section>
         
+
+        <section class="full-page skills" id="skills">
+            <h2>Skills</h2>
+
+            <div class="skills-container">
+                <div class="front-end">
+                    <h3>Front-End</h3>
+                    <ul>
+                        <li><img src="../images/icons/html5.png">HTML</li>
+                        <li><img src="../images/icons/css3.png">CSS</li>
+                        <li><img src="../images/icons/javascript.png">Javascript</li>
+                        <li><img src="../images/icons/sveltekit.png">SvelteKit</li>
+                    </ul>
+                </div>
+
+                <div class="back-end">
+                    <h3>Back-End</h3>
+                    <ul>
+                        <li><img src="../images/icons/nodejs.png">Node</li>
+                        <li><img src="../images/icons/expressjs.png">Express</li>
+                        <li><img src="../images/icons/mongodb.png">MongoDB</li>
+                    </ul>
+                </div>
+
+                <div class="others">
+                    <h3>Others</h3>
+                    <ul>
+                        <li><img src="../images/icons/git.png">Git</li>
+                        <li><img src="../images/icons/creative-cloud.png">Adobe Creative Cloud</li>
+                        <li><img src="../images/icons/api.png">REST and OAuth 2.0</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
         
         <section class="full-page contact" id="contact">
             <h2>Contact</h2>
+            <div class="contact-container">
+                <div class="contact-info">
+                    <p>I am currently looking for a</p>
+                    <p>front-end design or development internship</p>
+                    <p>for <strong>10 weeks and 20 weeks</strong></p>
+                    <p>starting in September 2024 and onwards.</p>
+                    <p>Feel free to contact me if you are interested in my work!</p>
+                </div>
+
+                <div class="social-links">
+                    <ul>
+                        <li>Github</li>
+                        <li>Github</li>
+                        <li>LinkedIn</li>
+                    </ul>
+                </div>
+            </div>
         </section>
 
         <%- include ('./partials/footer.ejs'); %>
