--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -222,7 +222,7 @@ header {
       flex-direction: row;
       justify-content: center;
       gap: 3em;
-      font-size: 1.3em;
+      font-size: 1.2em !important;
 
       margin: 0 4em 3em 5em;
 }
@@ -270,7 +270,7 @@ header {
     background-color: var(--thistle);
     border: 2px solid black;
     box-shadow: 0.5em 0.5em 0 0 black;
-    padding: 2em;
+    padding: 2em 2em 1em 2em;
     max-width: 50em;
   }
   
@@ -327,7 +327,7 @@ header {
 
 .marquee-inner ul li {
   padding-left: 2.5em;
-  font-size: 1.5em;
+  font-size: 1.4em !important;
   font-family: 'Syne';
   font-variation-settings: 'wdth' 1000, 'wght' 740;
 }
