--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -270,8 +270,8 @@ header {
     background-color: var(--thistle);
     border: 2px solid black;
     box-shadow: 0.5em 0.5em 0 0 black;
-    padding: 2em 2em 1em 2em;
-    max-width: 50em;
+    padding: 2em;
+    max-width: 28em;
   }
   
   .info p {
@@ -322,7 +322,7 @@ header {
   list-style: none;
   padding: 0;
   margin: 0;
-  font-size: 1.2em;
+  font-size: 1.1em;
 }
 
 .marquee-inner ul li {
@@ -346,7 +346,7 @@ header {
 /* Portfolio work */
 /* -------------- */
 
-.skills, .contact, .projects {
+.skills, .contact, .projects, .contact {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -372,6 +372,31 @@ header {
 
 .projects-cards li {
   padding: 2em;
+}
+
+.projects-cards li:last-child {
+  place-self: center;
+
+  border: 1px solid black;
+  box-shadow: 0.5em 0.5em 0 0 black;
+  background-color: var(--carnation-pink);
+  background-image: radial-gradient(var(--black) 5%, transparent 0);
+  background-size: 35px 35px;
+  
+  width: 14em;
+  height: 10em;
+
+  p {
+    text-transform: uppercase;
+    font-family: "Dela Gothic One", sans-serif;
+    font-size: 2em;
+    text-align: center;
+  }
+
+  a {
+    color: inherit;
+    text-decoration: none;
+  }
 }
 
 .projects-cards img {
@@ -410,6 +435,7 @@ header {
     border: 2px var(--black) solid;
     box-shadow: 0.3em 0.3em 0 0 black;
     padding: 0.5em;
+    background-color: lightblue;
   }
 }
 
@@ -440,14 +466,65 @@ header {
 
 
 .contact {
-  padding: 2em 0 5em 0;
+  padding: 2em 5em 5em 5em;
+
+  p {
+    margin: 0 0 1em 0;
+  }
 }
 
 .contact-container {
   display: flex;
   justify-content: center;
   flex-direction: row;
-  gap: 2em;
+  width: 100%;
+  max-width: max-content;
+  max-height: max-content;
+}
+
+.contact-info {
+  display: grid;
+
+  p {
+    font-size: 1.7em;
+  }
+}
+
+.social-links {
+  ul {
+    display: flex;
+    flex-direction: column;
+    gap: 2em;
+  }
+
+  img {
+    width: 3.5em;
+  }
+
+  li {
+    display: flex;
+    list-style: none;
+    align-items: center;
+    text-align: center;
+    font-size: 1.3em;
+    text-transform: uppercase;
+    font-family: "Dela Gothic One", sans-serif;
+  }
+  
+  li a {
+    display: flex;
+    gap: 1em;
+    align-items: center;
+    color: inherit;
+    text-decoration: none;
+  }
+}
+
+.social-links ul li:hover {
+  border: 2px var(--black) solid;
+  box-shadow: 0.3em 0.3em 0 0 black;
+  padding: 0.5em;
+  transition: all 0.3s ease;
 }
 
 
@@ -496,6 +573,18 @@ header {
     width: 7em;
   }
 
+
+
+  /* Contact container */
+  .contact-container {
+    flex-direction: column;
+  }
+
+
+  .social-links li {
+    justify-content: center;
+  }
+
 } 
 
 @media (max-width: 600px) {
@@ -516,6 +605,17 @@ header {
   .skills-container {
     display: flex;
     flex-direction: column;
+  }
+
+
+  /* Contact container */
+
+  .contact-container {
+    flex-direction: column;
+  }
+
+  .social-links li {
+    justify-content: center;
   }
 
 }
