The Archive button styling

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -59,6 +59,7 @@
                 <li>
                     <a href="#">
                         <p>The Archive</p>
+                        <span><strong>coming soon!</strong></span>
                     </a>
                 </li>
             </ul>
