--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -382,7 +382,7 @@ header {
   background-color: var(--carnation-pink);
   background-image: radial-gradient(var(--black) 5%, transparent 0);
   background-size: 35px 35px;
-  
+
   width: 14em;
   height: 10em;
 
@@ -397,6 +397,13 @@ header {
     color: inherit;
     text-decoration: none;
   }
+}
+
+.projects-cards li span {
+  position: relative;
+  top: -1em;
+  display: flex;
+  justify-content: center;
 }
 
 .projects-cards img {
